[gd_scene load_steps=7 format=3 uid="uid://0khslqnv23uc"]

[ext_resource type="Script" path="res://scavenger-hunt/scenes/lauch.gd" id="1_53sll"]
[ext_resource type="Texture2D" uid="uid://bky2v146mxykg" path="res://consoleBackgroundLarge.png" id="1_qc4ct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1cd7"]
size = Vector2(59, 259)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc1ue"]
size = Vector2(59, 289)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pqa7l"]
size = Vector2(59, 286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfl8n"]
size = Vector2(59, 24)

[node name="Lauch" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_53sll")

[node name="ConsoleBackgroundLarge" type="Sprite2D" parent="."]
z_index = 100
position = Vector2(1495.5, 943.5)
texture = ExtResource("1_qc4ct")

[node name="Camera2D2" type="Camera2D" parent="."]
z_index = 102
position = Vector2(1398.5, 871.5)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
offset_top = 247.0
offset_right = 1920.0
offset_bottom = 1335.0
scale = Vector2(1.1, 1.1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Meter" type="Control" parent="."]
anchors_preset = 0
offset_left = 359.0
offset_top = 409.0
offset_right = 418.0
offset_bottom = 1243.0

[node name="RedArea" type="Area2D" parent="Meter"]

[node name="RedColor" type="ColorRect" parent="Meter/RedArea"]
offset_right = 59.0
offset_bottom = 834.0
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Top" type="CollisionShape2D" parent="Meter/RedArea"]
position = Vector2(29.5, 129.5)
shape = SubResource("RectangleShape2D_j1cd7")

[node name="Bottom" type="CollisionShape2D" parent="Meter/RedArea"]
position = Vector2(29.5, 689.5)
shape = SubResource("RectangleShape2D_nc1ue")

[node name="GreenArea" type="Area2D" parent="Meter"]
position = Vector2(0, 259)

[node name="GreenColor" type="ColorRect" parent="Meter/GreenArea"]
offset_right = 59.0
offset_bottom = 286.0
color = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meter/GreenArea"]
position = Vector2(29.5, 143)
shape = SubResource("RectangleShape2D_pqa7l")

[node name="LineArea" type="Area2D" parent="Meter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Meter/LineArea"]
position = Vector2(29.5, 12)
shape = SubResource("RectangleShape2D_mfl8n")

[node name="Line" type="ColorRect" parent="Meter/LineArea"]
offset_right = 59.0
offset_bottom = 24.0
color = Color(0, 0, 0, 1)

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="area_entered" from="Meter/RedArea" to="." method="_on_red_area_area_entered"]
[connection signal="area_entered" from="Meter/GreenArea" to="." method="_on_green_area_area_entered"]
